kubernetes/rocketchat/mongo-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocket-mongodb
spec:
  serviceName: "mongo-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: rocket-mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo:4
        ports:
          - containerPort: 27017
        command: ["mongod"]
        args: ["--oplogSize","128","--replSet","rs0","--bind_ip_all"]
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db          
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
             claimName: mongo-pvc
      nodeSelector:
        app: rocketchat
  selector:
    matchLabels:
      app: rocket-mongodb
