kubernetes/rocketchat/rocket-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-deploy
  labels:
    app: rocketchat-server

spec:
  template:
    metadata:
      labels:
        app: rocketchat-server
    spec:
      containers:
      - name: rocketchat-server
        image: rocketchat/rocket.chat:latest
        ports:
        - containerPort: 3000
  replicas: 2
  selector:
    matchLabels:
      app: rocketchat-server
