kubernetes/rocketchat/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    app: mongo-svc
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: rocket-mongodb
